# job_search_with_db

./: database_example.ini  main.py  pyproject.toml  requirements.txt
data/: companies.json
src/: config.py  db_manager.py  hh_api.py  user_interface.py  utils.py
